--- a/src/app/components/MyExperience.css
+++ b/src/app/components/MyExperience.css
@@ -22,6 +22,9 @@
     justify-content: space-between;
     width: 100%;
 }
+.experience-header h5{
+    margin-top:1%;
+}
 
 .experience-logo {
     width: 200px; /* Adjust size as needed */
