--- a/src/app/components/MySkill.css
+++ b/src/app/components/MySkill.css
@@ -10,6 +10,7 @@
 .skills-container {
     background-color: #fff;
     padding: 20px;
+    margin-top: 2%;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
