--- a/src/app/components/MyProjects.css
+++ b/src/app/components/MyProjects.css
@@ -35,8 +35,6 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 12px 40px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
 }
 
-
-
 @media (max-width: 768px) {
     .projects-list {
         flex-direction: column; /* Stack items vertically on smaller screens */
@@ -47,3 +45,15 @@
         width: 100%; /* Adjust width for smaller screens */
     }
 }
+
+.card-body .detail-button {
+    background-color: #8B4513;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 13px;
+    cursor: pointer;
+    border-radius: 20px;
+    transition: background-color 0.3s;
+}
+
