--- a/src/app/components/MyProjects.css
+++ b/src/app/components/MyProjects.css
@@ -5,6 +5,7 @@
     max-width: 1200px; /* Optional: limits the maximum width */
     margin: 0 auto;
     padding: 20px;
+    padding-top: 80px; /* Add padding to account for the navbar */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -19,6 +20,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1); /* Light shadow */
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     overflow: hidden;
+    z-index: 1; /* Ensure cards are above other content */
 }
 
 .card:hover {
@@ -66,6 +68,7 @@
     .container {
         flex-direction: column; /* Stack cards vertically on smaller screens */
         align-items: center;
+        padding-top: 100px; /* Adjust top padding for smaller screens */
     }
 
     .card {
