--- a/src/app/components/MySkill.css
+++ b/src/app/components/MySkill.css
@@ -59,3 +59,18 @@
 .skill-img:hover {
     transform: translateY(-5px);
 }
+@media (max-width: 768px) {
+    .skills-title {
+        font-size: 20px;
+    }
+
+   
+}
+
+@media (max-width: 480px) {
+    .skills-title {
+        font-size: 18px;
+    }
+
+ 
+}
