--- a/src/app/components/SideNav.css
+++ b/src/app/components/SideNav.css
@@ -2,7 +2,7 @@
 .sidenav {
     position: fixed;
     width: 12%;
-    height: 100%;
+    height: 100vh; /* Full viewport height */
     background-color: #2F4F4F; /* Dark green background */
     padding-top: 20px;
     display: flex;
@@ -10,7 +10,7 @@
     align-items: center;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
-    overflow-y: auto;
+    overflow-y: auto; /* Allows scrolling if content overflows */
     transform: translateX(0);
     z-index: 1000;
 }
