--- a/src/app/components/CompanyProjects.css
+++ b/src/app/components/CompanyProjects.css
@@ -28,39 +28,25 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 12px 40px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
 }
 
-.card-container {
+.card-img-top {
+    object-fit: cover; /* Ensure the image covers the area */
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 20px;
-}
-
-.card-container .detail-button {
-    background-color: #8B4513;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 20px;
-    transition: background-color 0.3s;
-    margin-top: 10px;
-}
-
-.card-description {
-    height: 250px;
-    margin-bottom: 3px;
-}
-
-.div-card-title {
-    margin-bottom: 10px;
-    height: 50px;
 }
 
 .card-title {
     font-size: 1.5rem;
-    margin: 0;
+    margin-bottom: 10px; /* Space below the title */
 }
 
 .card-text {
     font-size: 1rem;
+    margin-bottom: 20px; /* Space between text and button */
 }
 
 /* Responsive Design */
@@ -85,7 +71,7 @@
         font-size: 0.875rem; /* Adjust font size for smaller screens */
     }
 
-    .card-container .detail-button {
+    .btn {
         font-size: 12px; /* Adjust button font size for smaller screens */
     }
 }
@@ -110,7 +96,7 @@
         font-size: 0.75rem; /* Adjust font size for very small screens */
     }
 
-    .card-container .detail-button {
+    .btn {
         font-size: 11px; /* Adjust button font size for very small screens */
     }
 }
